--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@
 .*.swp
 /env
 /dl
-/.config
 /.config.old
 /bin
 /build_dir
@@ -12,7 +11,6 @@
 /logs
 /feeds
 /feeds.conf
-/files
 /package/feeds
 /package/openwrt-packages
 key-build*
@@ -24,3 +22,5 @@ key-build*
 .emacs.desktop*
 TAGS*~
 git-src
+nohup.out
+
