--- a/.config
+++ b/.config
@@ -4302,7 +4302,6 @@ CONFIG_PACKAGE_maccalc=y
 # CONFIG_PACKAGE_screen is not set
 # CONFIG_PACKAGE_sed is not set
 # CONFIG_PACKAGE_serialconsole is not set
-# CONFIG_PACKAGE_sernet is not set
 # CONFIG_PACKAGE_sg3-utils is not set
 # CONFIG_PACKAGE_shadow-utils is not set
 # CONFIG_PACKAGE_shtool is not set
@@ -4391,4 +4390,4 @@ CONFIG_PACKAGE_maccalc=y
 # libraries
 #
 # CONFIG_PACKAGE_orbit2 is not set
-CONFIG_OVERRIDE_PKGS="libnetfilter-cttimeout libnetfilter-cthelper libnetfilter-queue"
+CONFIG_OVERRIDE_PKGS="libnetfilter-queue libnetfilter-cttimeout libnetfilter-cthelper"
