--- a/.config
+++ b/.config
@@ -232,6 +232,7 @@ CONFIG_FEED_routing=y
 CONFIG_FEED_telephony=y
 CONFIG_FEED_management=y
 CONFIG_FEED_wrtnode=y
+CONFIG_FEED_my=y
 CONFIG_FEED_oldpackages=y
 # CONFIG_SMIMEOPT is not set
 CONFIG_OPKGSMIME_PASSPHRASE=y
@@ -1175,7 +1176,7 @@ CONFIG_PACKAGE_jsonfilter=y
 # CONFIG_PACKAGE_libatomic is not set
 CONFIG_PACKAGE_libc=y
 CONFIG_PACKAGE_libgcc=y
-# CONFIG_PACKAGE_libpthread is not set
+CONFIG_PACKAGE_libpthread=y
 # CONFIG_PACKAGE_librt is not set
 # CONFIG_PACKAGE_libstdcpp is not set
 # CONFIG_PACKAGE_libthread-db is not set
@@ -2632,20 +2633,20 @@ CONFIG_PACKAGE_luci-base=y
 #
 # Translations
 #
+# CONFIG_LUCI_LANG_uk is not set
 # CONFIG_LUCI_LANG_hu is not set
 # CONFIG_LUCI_LANG_pt is not set
-# CONFIG_LUCI_LANG_sk is not set
-# CONFIG_LUCI_LANG_ro is not set
+# CONFIG_LUCI_LANG_no is not set
 # CONFIG_LUCI_LANG_en is not set
 # CONFIG_LUCI_LANG_el is not set
-# CONFIG_LUCI_LANG_uk is not set
+# CONFIG_LUCI_LANG_sk is not set
 # CONFIG_LUCI_LANG_ru is not set
 # CONFIG_LUCI_LANG_vi is not set
 # CONFIG_LUCI_LANG_de is not set
-# CONFIG_LUCI_LANG_no is not set
+# CONFIG_LUCI_LANG_ro is not set
 # CONFIG_LUCI_LANG_ms is not set
 # CONFIG_LUCI_LANG_pl is not set
-# CONFIG_LUCI_LANG_zh-cn is not set
+CONFIG_LUCI_LANG_zh-cn=y
 # CONFIG_LUCI_LANG_he is not set
 # CONFIG_LUCI_LANG_zh-tw is not set
 # CONFIG_LUCI_LANG_tr is not set
@@ -2785,7 +2786,7 @@ CONFIG_PACKAGE_luci-lib-nixio=y
 # CONFIG_PACKAGE_luci-i18n-base-tr is not set
 # CONFIG_PACKAGE_luci-i18n-base-uk is not set
 # CONFIG_PACKAGE_luci-i18n-base-vi is not set
-# CONFIG_PACKAGE_luci-i18n-base-zh-cn is not set
+CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-base-zh-tw is not set
 # CONFIG_PACKAGE_luci-i18n-firewall-ca is not set
 # CONFIG_PACKAGE_luci-i18n-firewall-cs is not set
@@ -2810,7 +2811,7 @@ CONFIG_PACKAGE_luci-lib-nixio=y
 # CONFIG_PACKAGE_luci-i18n-firewall-tr is not set
 # CONFIG_PACKAGE_luci-i18n-firewall-uk is not set
 # CONFIG_PACKAGE_luci-i18n-firewall-vi is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-zh-cn is not set
+CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-firewall-zh-tw is not set
 
 #
@@ -2896,6 +2897,13 @@ CONFIG_POSTFIX_CDB=y
 # CONFIG_PACKAGE_streamripper is not set
 # CONFIG_PACKAGE_vips is not set
 # CONFIG_PACKAGE_xupnpd is not set
+
+#
+# My
+#
+CONFIG_PACKAGE_ser2tcp=y
+CONFIG_PACKAGE_smartNet=y
+CONFIG_PACKAGE_supervisor=y
 
 #
 # Network
@@ -4379,7 +4387,7 @@ CONFIG_PACKAGE_maccalc=y
 # CONFIG_PACKAGE_spi-bridge is not set
 # CONFIG_PACKAGE_uixo_console is not set
 # CONFIG_PACKAGE_uixo_manager is not set
-# CONFIG_PACKAGE_webwifi is not set
+CONFIG_PACKAGE_webwifi=y
 # CONFIG_PACKAGE_wrtbox is not set
 
 #
@@ -4390,4 +4398,3 @@ CONFIG_PACKAGE_maccalc=y
 # libraries
 #
 # CONFIG_PACKAGE_orbit2 is not set
-CONFIG_OVERRIDE_PKGS="libnetfilter-queue libnetfilter-cttimeout libnetfilter-cthelper"
