--- a/.config
+++ b/.config
@@ -1177,7 +1177,7 @@ CONFIG_PACKAGE_jsonfilter=y
 CONFIG_PACKAGE_libc=y
 CONFIG_PACKAGE_libgcc=y
 CONFIG_PACKAGE_libpthread=y
-# CONFIG_PACKAGE_librt is not set
+CONFIG_PACKAGE_librt=y
 # CONFIG_PACKAGE_libstdcpp is not set
 # CONFIG_PACKAGE_libthread-db is not set
 CONFIG_PACKAGE_logd=y
@@ -2903,7 +2903,8 @@ CONFIG_POSTFIX_CDB=y
 #
 CONFIG_PACKAGE_ser2tcp=y
 CONFIG_PACKAGE_smartNet=y
-CONFIG_PACKAGE_supervisor=y
+# CONFIG_PACKAGE_supervisor is not set
+CONFIG_PACKAGE_webConfig=y
 
 #
 # Network
@@ -3835,7 +3836,7 @@ CONFIG_PACKAGE_ppp-mod-pppoe=y
 # CONFIG_PACKAGE_seafile-seahub is not set
 # CONFIG_PACKAGE_seafile-server is not set
 # CONFIG_PACKAGE_send is not set
-# CONFIG_PACKAGE_ser2net is not set
+CONFIG_PACKAGE_ser2net=y
 # CONFIG_PACKAGE_serialoverip is not set
 # CONFIG_PACKAGE_shat is not set
 # CONFIG_PACKAGE_slurm is not set
@@ -3845,7 +3846,8 @@ CONFIG_PACKAGE_ppp-mod-pppoe=y
 # CONFIG_PACKAGE_snmp-utils is not set
 # CONFIG_PACKAGE_snmpd is not set
 # CONFIG_PACKAGE_snmpd-static is not set
-# CONFIG_PACKAGE_socat is not set
+CONFIG_PACKAGE_socat=y
+# CONFIG_SOCAT_SSL is not set
 # CONFIG_PACKAGE_softflowd is not set
 # CONFIG_PACKAGE_soloscli is not set
 # CONFIG_PACKAGE_sscep is not set
@@ -4387,7 +4389,7 @@ CONFIG_PACKAGE_maccalc=y
 # CONFIG_PACKAGE_spi-bridge is not set
 # CONFIG_PACKAGE_uixo_console is not set
 # CONFIG_PACKAGE_uixo_manager is not set
-CONFIG_PACKAGE_webwifi=y
+# CONFIG_PACKAGE_webwifi is not set
 # CONFIG_PACKAGE_wrtbox is not set
 
 #
@@ -4398,3 +4400,4 @@ CONFIG_PACKAGE_webwifi=y
 # libraries
 #
 # CONFIG_PACKAGE_orbit2 is not set
+CONFIG_OVERRIDE_PKGS="libnetfilter-queue libnetfilter-cttimeout libnetfilter-cthelper"
